# bustle

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  env.dokploy.txt  manage.py  ngix.conf  pyproject.toml  requirements.txt
bustle/: asgi.py  settings.py  urls.py  wsgi.py
cart/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: cart_empty_item.html  cart_item.html  cart_modal.html  cart_summary.html
cart/templates/cart/includes/: cart_button.html
main/: admin.py  context_processors.py  models.py  urls.py  views.py
main/management/commands/: load_test_data.py
main/migrations/: 0001_initial.py  0002_alter_dish_main_image.py  0002_alter_dish_slug.py  0003_alter_dish_main_image.py  0003_alter_dish_slug.py  0004_add_allergens.py  0004_dish_description_alter_dish_main_image.py  0005_default_allergens.py
main/templates/: dish_detail.html  product_detail.html
main/templates/main/: base.html  catalog.html  dish_detail.html  filter_modal.html  home_content.html  search_input.html
orders/: admin.py  forms.py  models.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
orders/templates/orders/: checkout_content.html  empty_cart.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_fist_name_alter_customuser_first_name_and_more.py  0003_remove_customuser_fist_name_and_more.py  0004_add_excluded_allergens.py
users/templates/users/: profile.html  register.html
(+4 files in other folders)
